# RAG-with-elastic

./: .env  .gitignore  UI.py  custom_prompt.py  docker-compose.yaml  initiate_services.py  manage_elastic.py  pyproject.toml  readme.md  requirements.txt  test_service_initiations.py
.github/workflows/: test-code.yaml
manage_blob/: __init__.py  blob_methods.py  utils.py
manage_elastic/: __init__.py  elastic_methods.py
manage_embedding/: __init__.py  embedding_methods.py
sample-documents/: sample-document01.txt  sample-document02.docx  sample-document03.doc
utils/: utils.py
